# Engineering-Assistant

./: CMakeLists.txt  README.md
src/models/: Account.cpp  Account.h  Transaction.cpp  Transaction.h
src/services/: AccountService.cpp  AccountService.h
src/tests/: tempCodeRunnerFile.cpp  test  test-account-service.cpp
